[project]
name = "gguf-model-runner"
version = "0.1.0"
description = "GGUF AI Model Runner - Streamlit application for running GGUF models"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.50.0",
    "psutil>=5.9.0",
    "llama-cpp-python==0.2.90",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."] 
include = ["*.py"]
exclude = ["attached_assets*", "node_modules*", "models*"]

[tool.setuptools]
py-modules = ["app", "batch_processor", "chat_interface", "model_manager", "performance_monitor", "utils"]
